# Software-Engineering

./: Estensione ad hypro.pptx  README.md
Doxygen_documentation/html/: DAG-hypro_8h.html  DAG-hypro_8h__dep__incl.dot  DAG-hypro_8h__dep__incl.md5  DAG-hypro_8h__incl.dot  DAG-hypro_8h__incl.md5  DAG-hypro_8h_source.html  DAG-main-test_8cpp_source.html  DAG-test_8h_source.html  DAG_8h.html  DAG_8h__dep__incl.dot  DAG_8h__dep__incl.md5  DAG_8h__incl.dot  DAG_8h__incl.md5  DAG_8h_source.html  annotated.html  classDAG-members.html  classDAG.html  classDAG__hypro-members.html  classDAG__hypro.html  classDAG__hypro__coll__graph.dot  classDAG__hypro__inherit__graph.md5  classDAG__inherit__graph.dot  classDAG__inherit__graph.md5  classDAG__test-members.html  classDAG__test.html  classDAG__test__coll__graph.md5  classDAG__test__inherit__graph.dot  classes.html  files.html  functions.html  functions_8h.html  functions_8h__dep__incl.dot  functions_8h__dep__incl.md5  functions_8h__incl.dot  functions_8h__incl.md5  functions_8h_source.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  (+36 more)
Doxygen_documentation/html/search/: all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  related_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js
code-EM/: DAG-cmp.cpp  DAG-cover.cpp  DAG-make.cpp  DAG-print2.cpp  DAG-sum.cpp  DAG.cpp  DAG.h  DAG.odt  IR.cpp  README-TEST.odt  README.odt  UIR.cpp  basic.cpp  main-EM.cpp  main.cpp  types.h
code-GC/: BR.cpp  CMakeLists.txt  DAG-cover-hypro.cpp  DAG-make-hypro.cpp  README.TXT  Readme-TEST.txt  functions.h  main-GC.cpp  test-main-merged.cpp  test-main.cpp  test.txt  types.h
docs/drs/: drs.odt
docs/main-debug-cmakelists/: CMakeLists.txt
docs/resources/: fast_installation.txt  hypro_installation.odt  readme-test.odt  what_and_how_to_compile.odt
docs/urd/: urd.odt
template-GC/: BR.tpp  CMakeLists.txt  DAG-cmp.tpp  DAG-cover-hypro.tpp  DAG-cover.tpp  DAG-hypro.h  DAG-make-hypro.tpp  DAG-make.tpp  DAG-sum.tpp  DAG.h  DAG.tpp  IR.tpp  UIR.tpp  basic.tpp  functions.h  main-debug.cpp  main-hypro.cpp  types.h
template-GC/tests/: output.txt  output01.txt  output04.txt  output06.txt  readme.txt  test.txt  test01.txt  test02.txt  test03.txt  test05.txt  test06.txt
test_funzionali/: moggi01.in  moggi01.out  moggi02.in  moggi02.out  moggi03.in  moggi03.out  output02.txt  output03.txt  output05.txt  readme.txt  test04.txt
test_strutturali/: BASIC-main-test.cpp  BR-main-test.cpp  BR.tpp  DAG-cmp.tpp  DAG-cover.tpp  DAG-hypro.h  DAG-main-test.cpp  DAG-make.tpp  DAG-sum.tpp  DAG-test.h  DAG.h  DAG.tpp  IR.tpp  UIR-main-test.cpp  UIR.tpp  structural_testing.odt
test_strutturali/gcov/: BR.tpp.gcov  DAG-cmp.tpp.gcov  DAG-cover.tpp.gcov  DAG-make.tpp.gcov  DAG-sum.tpp.gcov  DAG.tpp.gcov  IR.tpp.gcov  UIR.tpp.gcov  basic.tpp.gcov
